--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,13 +12,15 @@ services:
     depends_on:
       - db
   db:
+      env_file:
+        - ./.env
       image: postgres:12.0-alpine
       volumes:
         - postgres_data:/var/lib/postgresql/data/
       environment:
-        - POSTGRES_USER=postgres
-        - POSTGRES_PASSWORD=3287973
-        - POSTGRES_DB=drf_blog
+        - POSTGRES_USER=${USER}
+        - POSTGRES_PASSWORD=${PASSWORD}
+        - POSTGRES_DB=${NAME}
       ports:
         - 5432:5432
 volumes:
